infra/k8s/processor-depl.yaml
# ===============================
# Deployment: Processor
# ===============================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: processor
  template:
    metadata:
      labels:
        app: processor
    spec:
      containers:
        - name: processor
          image: processor:latest
