infra/k8s/producer-depl.yaml
# ===============================
# Deployment: Producer
# ===============================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: producer
  template:
    metadata:
      labels:
        app: producer
    spec:
      containers:
        - name: producer
          image: producer:latest
